# fastapi_solution

./: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
src/: main.py
src/api/v1/: films.py  genres.py  persons.py
src/api/v1/output_schemas/: schema_films.py  schema_genres.py  schema_persons.py
src/core/: config.py  logger.py
src/db/: elastic_extractor.py  redis_cache.py
src/models/: film.py  genre.py  mapping.py  paginator.py  person.py
src/services/: base_service.py  film_service.py  genre_service.py  person_service.py
tests/: .env
tests/functional/: conftest.py  settings.py
tests/functional/fixtures/: backend.py  elastic.py
tests/functional/src/: test_films.py  test_genres.py  test_persons.py
tests/functional/testdata/: data.py  es_data.py  es_mappings.py
tests/functional/utils/: wait.py
